@@ -8,18 +8,16 @@ import static timmax.tilegame.basemodel.protocol.TypeOfTransportPackage.*;
 public class MapOfStructOfTransportPackageOfClient extends MapOfStructOfTransportPackage {
     public MapOfStructOfTransportPackageOfClient() {
         super(Map.of(
+                LOGOUT, Collections.emptyMap(),
                 LOGIN, Map.of(
                         "userName", String.class,
                         "password", String.class
                 ),
-                LOGOUT, Collections.emptyMap(),
-                GET_GAME_TYPE_SET, Collections.emptyMap()
+                FORGET_GAME_TYPE_SET, Collections.emptyMap(),
+                GET_GAME_TYPE_SET, Collections.emptyMap(),
+                SELECT_GAME_TYPE, Map.of(
+                        "gameType", String.class
+                )
         ));
-
-/*
-        Map<String, Class<?>> mapOfParamName_Class__SelectGameType = new HashMap<>();
-        mapOfParamName_Class__SelectGameType.put("gameType", ServerBaseModel.class);
-        mapOfUniversalType.put(SELECT_GAME_TYPE, mapOfParamName_Class__SelectGameType);
-*/
     }
 }
